fixed header alignment

--- a/styles.css
+++ b/styles.css
@@ -5,20 +5,27 @@
     font-family: sans-serif;
 }
 #header{
-    margin: 0 auto;
     width: 100%;
-    height: 50vh;
+    height: 75vh;
     display: flex;
+    flex-direction: column;
+  
     background-color: #1F2937;
 }
 header{
+    width: 60%;
+    height: 75vh;
     margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .navbar{
+    width: 60%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     padding: 16px 0;
+    margin: 0 auto;
 }
 .navbar ul{
     display: flex;
@@ -38,6 +45,11 @@ header{
     font-size: 24px;
     color: #F9FAF8;
 }
+.header-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .header-container p{
     font-size: 18px;
     color: #E5E7EB;
@@ -46,4 +58,18 @@ header{
     font-size: 48px;
     font-weight: 800;
     color: #F9FAF8;
+}
+.header-img{
+    background-color: 6D747D;
+    width: 400px;
+    height: 200px;
+}
+.sign-up{
+    background-color: 3B82F6;
+    padding: 8px 32px;
+    border-radius: 8px;
+    color: #E5E7EB;
+    font-weight: 600;
+    margin: 8px 0;
+    border: none;
 }
